<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/volumes" />

                <ImageView
                    android:id="@+id/phome"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/phome" />

                <Spinner
                    android:id="@+id/spinner_volumes"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/path"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="clip_horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="0dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/location"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fdLinearLayoutList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/primary"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <LinearLayout
                android:id="@+id/fdLinearLayoutSelect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/fdButtonSelectAll"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/selectall" />

                    <Button
                        android:id="@+id/fdButtonSelect"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/select" />

                    <ImageButton
                        android:id="@+id/fdNewDir"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/newdir" />

                    <Button
                        android:id="@+id/fdButtonNew"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nnew" />

                    <Button
                        android:id="@+id/fdCloseButton"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancel" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fdLinearLayoutCreate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFilename"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/file_name" />

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/fdEditTextFile"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <requestFocus />
                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/fdButtonCreate"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/create" />

                    <Button
                        android:id="@+id/fdButtonCancel"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancel" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fdLinearLayoutCreateDir"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewDirname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/dir_name" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/fdEditTextDir"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <requestFocus />
                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/fdButtonCreateDir"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/create" />

                    <Button
                        android:id="@+id/fdButtonCancelDir"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancel" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/fdLinearLayoutList"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <ListView
                android:id="@+id/list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <TextView
                android:id="@android:id/empty"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/no_data" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
